<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ting</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_profile">Profile</string>
    <string name="action_proximity">Reminder</string>
    <string name="action_explore">Explore</string>
    <string name="action_search">Search</string>
    <string name="action_skip">skip</string>
    <string name="action_search_hint">Search Ting</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="button_reting">Re-Ting</string>
    <string name="button_like">Like</string>
    <string name="button_share">Share</string>
    <string name="button_add_reminder">Add new Reminder</string>
    <string name="button_get_position">Get Position</string>
    <string name="button_save_reminder">Save Reminder</string>
    <string name="reminder_name">Set a Reminder for your Home</string>
    <string name="reminder_latitude">Latitude:</string>
    <string name="reminder_longitude">Longitude:</string>
    <string name="connection_error_title">No Internet Connection</string>
    <string name="connection_error_content">For Ting to work properly, please enable your Internet Connection.</string>
    <string name="login_error_title">Login Error</string>
    <string name="login_error_content">Your Internet Connection has to be enabled, if you want to log in.</string>
    <string name="button_back">Back</string>
    <string name="button_dismiss">OK</string>
    <string name="no_location">No Location found</string>
    <string name="fill_in">Please fill in the blanks</string>
    <string name="share_headder">Share Link with...</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_user_header">user</string>
    <string name="search_pins_header">pins</string>
    <string name="search_boards_header">boards</string>
    <string name="share_selectpin_title">Select an image to pin</string>
    <string name="select_board_title">Select one of your boards</string>
    <string name="selectpinimage_title">Select an image you want to pin.</string>
    <string name="editpin_pinbutton">Ting it.</string>
    <string name="editpin_title">Edit your Pin.</string>
    <string name="sending_pin_dialog_title">Creating Pin...</string>
    <string name="share_target_generic_error">There was an error retrieving what you wanted to share with us!</string>
    <string name="special_category_feed_name">Your Feed</string>
    <string name="special_category_everything_name">Everything</string>
    <string name="button_text_board_unfollow">unfollow</string>
    <string name="button_text_board_follow">follow</string>
    <string name="button_edit_profile_text">Edit profile</string>
    <string name="button_create_board_text">Create a Board</string>
    <string name="label_board_title">boardtitle</string>
    <string name="label_board_description">description</string>
    <string name="action_save">save</string>
    <string name="loading_saving_board">saving your board</string>
    <string name="success_saving_board">saved your board</string>
    <string name="success_saving_profile">saved your profile</string>
    <string name="success_password_sent">we have sent an email with instructions on how to reset your password</string>
    <string name="label_select_category">select a category</string>
    <string name="label_username">name</string>
    <string name="button_change_profileimage_text">change image</string>
    <string name="button_edit_profileimage_text">change profile image</string>
    <string name="label_email">email</string>
    <string name="dialog_unsaved_changes_title">Unsaved changes.</string>
    <string name="dialog_unsaved_changes_content">You have unsaved changes. Do you want to proceed?</string>
    <string name="button_proceed_text">Proceed</string>
    <string name="button_change_link_text">change link</string>
    <string name="button_edit_board_text">edit board</string>
    <string name="label_user_info">info</string>
    <string name="favorite_category_needs_login">Log in to set a favorite category.</string>
    <string name="needs_login_like">Log in to like a pin.</string>
    <string name="needs_login_reting">Log in to re-ting a pin.</string>
    <string name="needs_login_followboard">Log in to follow this board.</string>
    <string name="button_liked">Liked</string>
    <string name="logged_out">logged out</string>
    <string name="action_register">register</string>
    <string name="action_passwordrestore">send new password</string>
    <string name="action_facebook_login">log in with facebook</string>
    <string name="action_twitter_login">log in with twitter</string>
    <string name="welcome_dialog_title">Welcome to Ting.</string>
    <string name="welcome_dialog_invite_friends">You can invite some friends of social networks if you like.</string>
    <string name="welcome_dialog_edit_profile">Why don´t you start with editing your profile to let others know who you are?</string>
    <string name="welcome_dialog_edit_board">Why don´t you create a board to show others your interests?</string>
    <string name="welcome_dialog_follow_board">You can personalize your experience by following boards with topics you most like and adore!</string>
    <string name="welcome_dialog_select_interests">You can personalize your experience with Ting by telling us what you are interested in.</string>
    <string name="success_share">successfully tinged this on your board</string>
    <string name="button_openlink">browser</string>
    <string name="notificationContentTitle">Ting-Reminder</string>
    <string name="notificationContentText">Time to check some-Ting!</string>
    <string name="saved">saved</string>

    <string name="action_invite_facebook">invite facebook friends</string>

    <string name="no_search_results">no results found to your search</string>
</resources>