<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:resauto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.ur.mi.android.excercises.walkthrough.PageOne" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        resauto:actionViewClass="android.support.v7.widget.SearchView"
        resauto:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        resauto:showAsAction="never"
        android:title="@string/action_profile"/>
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_login"/>

    <!--
         <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    -->

    <item
        android:id="@+id/action_proximity"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_proximity"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>

</menu>