<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/board_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ToggleButton
        android:visibility="gone"
        android:id="@+id/board_follow_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/button_text_board_follow"
        android:textOn="@string/button_text_board_unfollow" />

    <Button
        android:visibility="gone"
        android:id="@+id/button_edit_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_edit_board_text" />

</LinearLayout>