<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:padding="5dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/viewswitcher_board_controls_switcher"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview_board_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textview_board_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <ViewSwitcher
        android:id="@+id/viewswitcher_board_controls_switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:visibility="gone" >

        <ToggleButton
            android:id="@+id/togglebutton_follow_board"
            style="@style/ting_toggle_button_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/button_text_board_follow"
            android:textOn="@string/button_text_board_unfollow" />

        <Button
            android:id="@+id/button_edit_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_board_text" />
    </ViewSwitcher>

</RelativeLayout>