<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pin_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ViewSwitcher
        android:id="@+id/pin_loading_switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/pin_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ViewSwitcher>

    <LinearLayout
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pin_content_margin"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/pin_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pin_content_margin"
            android:text="Los Campesinos! – “Little Mouth”"
            android:textColor="@color/pin_headline_text_color"
            android:textSize="@dimen/pin_healine_text_size" />

        <TextView
            android:id="@+id/pin_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pin_divider_height"
            android:background="@color/pin_divider_background_color" />

        <TextView
            android:id="@+id/pin_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pin_text_margin_top_bottom"
            android:layout_marginTop="@dimen/pin_text_margin_top_bottom"
            android:text="Last year, the permanently fired-up Welsh indie-poppers released No Blues, their first album in a couple of years, a long stretch for a band as prolific as this"
            android:textSize="@dimen/pin_content_text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
            android:id="@+id/pin_controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/button_openlink"
                android:orientation="horizontal" >

                <ToggleButton
                    android:id="@+id/button_like"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:layout_weight="1"
                    android:background="@drawable/ting_toggleselector"
                    android:textColor="@drawable/ting_toggle_text_selector"
                    android:textOff="@string/button_like"
                    android:textOn="@string/button_liked"
                    android:textSize="@dimen/pin_controls_textsize" />

                <Button
                    android:id="@+id/button_reting"
                    style="@style/ting_button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_reting" />

                <Button
                    android:id="@+id/button_share"
                    style="@style/ting_button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_share" />
            </LinearLayout>

            <Button
                android:id="@+id/button_openlink"
                style="@style/ting_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/button_openlink" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>